# ansible-freeipa

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .yamllint  CLIENT.md  CONTRIBUTING.md  README  README-automember.md  README-automountkey.md  README-automountlocation.md  README-automountmap.md  README-cert.md  README-config.md  README-delegation.md  README-dnsconfig.md  README-dnsforwardzone.md  README-dnsrecord.md  README-dnszone.md  README-group.md  README-hbacrule.md  README-hbacsvc.md  README-hbacsvcgroup.md  README-host.md  README-hostgroup.md  README-idoverridegroup.md  README-idoverrideuser.md  README-idp.md  README-idrange.md  README-idview.md  README-inventory-plugin-freeipa.md  README-ldap3_orm.md  README-location.md  README-netgroup.md  README-passkeyconfig.md  README-permission.md  README-privilege.md  README-pwpolicy.md  README-role.md  README-selfservice.md  README-server.md  (+28 more)
.copr/: Makefile
.github/workflows/: ansible-test.yml  docs.yml  fast_test.yml  lint.yml  multihost.yml  readme.yml  test_deployment.yml
action_plugins/: ipahost.py
containers/fedora-latest/: 00-ipv6.conf  Dockerfile  hostnamectl-wrapper
docs/development/: running_tests.md  writing_new_modules.md
docs/modules/: dnsrecord.md  dnszone.md  group.md  hbacrule.md  hbacsvcgroup.md  host.md  location.md  permission.md  privilege.md  selfservice.md  server.md  topology.md
docs/roles/: ipabackup.md  ipaclient.md  ipareplica.md  ipaserver.md
infra/azure/: azure-pipelines.yml  build-containers.yml  nightly.yml  pr-pipeline.yml
infra/image/: build-inventory  build.sh  inventory  run-tests.sh  shcontainer  shdefaults  shfun  shlog  start.sh
infra/scenarios/: README.md  ipa-ad-trust.yml  requirements.txt  run_test_scenario.sh  start-scenario  stop-scenario
inventory/: hosts  hosts.cluster  hosts.replica
inventory/group_vars/: ipaclients.yml  ipacluster.yml  ipareplicas.yml
meta/: runtime.yml
module_utils/: ansible_ipa_client.py  ansible_ipa_replica.py  ansible_ipa_server.py
molecule/: default
molecule/c10s/: molecule.yml
molecule/c10s-build/: Dockerfile  molecule.yml
molecule/c8s/: molecule.yml
molecule/c8s-build/: Dockerfile  molecule.yml
molecule/c9s/: molecule.yml
molecule/c9s-build/: Dockerfile  molecule.yml
molecule/centos-7/: molecule.yml
molecule/centos-7-build/: molecule.yml
molecule/centos-8/: molecule.yml
molecule/centos-8-build/: molecule.yml
molecule/centos-9/: molecule.yml
molecule/centos-9-build/: Dockerfile  molecule.yml
molecule/fedora-latest/: molecule.yml
molecule/fedora-latest-build/: Dockerfile  molecule.yml
molecule/fedora-rawhide/: molecule.yml
molecule/fedora-rawhide-build/: Dockerfile  molecule.yml
playbooks/: backup-server.yml  backup_server_to_controller.yml  copy-all-backups-from-server.yml  copy-backup-from-controller.yml  copy-backup-from-server.yml  copy-backup-to-server.yml  copy_all_backups_from_server.yml  install-smartcard-clients.yml  install-smartcard-server.yml  install_client.yml  install_cluster.yml  install_replica.yml  install_server.yml  install_smartcard_replicas.yml  install_smartcard_servers.yml  remove-backup-from-server.yml  remove_all_backups_from_server.yml  restore-server-from-controller.yml  restore-server.yml  uninstall-replica.yml  uninstall_client.yml  uninstall_cluster.yml  uninstall_server.yml
playbooks/automember/: automember-absent.yml  automember-default-group-not-set.yml  automember-default-group-set.yml  automember-default-hostgroup-not-set.yml  automember-default-hostgroup-set.yml  automember-group-absent.yml  automember-group-membership-all-users-rebuilt.yml  automember-group-membership-users-rebuilt.yml  automember-group-orphans-removed.yml  automember-group-present.yml  automember-hostgroup-absent.yml  automember-hostgroup-membership-all-hosts-rebuilt.yml  automember-hostgroup-membership-hosts-rebuilt.yml  automember-hostgroup-orphans-removed.yml  automember-hostgroup-present.yml  automember-hostgroup-rule-absent.yml  automember-hostgroup-rule-present.yml  automember-present.yml
playbooks/automount/: .automount-map-present.yml.swp  (+10 more)
tests/: README-containers.md  README-podman.md  README.md  Vagrantfile  ansible.cfg  env_freeipa_facts.yml  run-test-in-vagrant.sh  tasks_remove_trust.yml  tasks_set_trust.yml  test_inventory.py  test_playbook_runs.py  utils.py  vagrant-install-ipa.sh
utils/: ansible-doc-test  ansible-freeipa-test.sh  ansible-freeipa.spec.in  ansible-ipa-client-install  ansible-ipa-replica-install  ansible-ipa-server-install  build-collection.sh  build-galaxy-release.sh  build-srpm.sh  changelog  check_test_configuration.py  create_action_group.py  facts.py  filter_tests  galaxyfy-README.py  galaxyfy-module-EXAMPLES.py  galaxyfy-playbook.py  galaxyfy.py  galaxyify-playbook.py  gen_module_docs.py  gen_modules_docs.sh  get_test_modules.py  lint_check.sh  new_module  run-tests.sh  set_test_modules  setup_test_container.sh  shansible  shcontainer  shfun  shlog
(+856 files in other folders)
