[metadata]
name = ansible-freeipa
summary = Ansible roles for FreeIPA
description-file =
    README.md
home-page = https://github.com/freeipa/ansible-freeipa
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux

[pbr]
warnerrors = True

[wheel]
universal = 1

[files]
data_files =
    /usr/share/ansible/roles/ipaclient = roles/ipaclient/*
    /usr/share/ansible/roles/ipaserver = roles/ipaserver/*
    /usr/share/ansible/roles/ipareplica = roles/ipareplica/*

[flake8]
extend-ignore = E203, D1, D212, D203, D400, D401
exclude = .git,__pycache__,.tox,.venv
per-file-ignores =
    plugins/*:E402
    roles/*:E402

[pydocstyle]
inherit = false
ignore = D1,D212,D203
