[metadata]
name = ansible-freeipa
summary = Ansible roles for FreeIPA
description-file =
    README.md
home-page = https://github.com/freeipa/ansible-freeipa
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux

[pbr]
warnerrors = True

[wheel]
universal = 1

[files]
data_files =
    /usr/share/ansible/roles/ipaclient = roles/ipaclient/*
    /usr/share/ansible/roles/ipaserver = roles/ipaserver/*
    /usr/share/ansible/roles/ipareplica = roles/ipareplica/*

[flake8]
extend-ignore = E203, D1, D212, D203, D400, D401
exclude = .git,__pycache__,.tox,.venv
per-file-ignores =
    plugins/*:E402
    roles/*:E402

[pydocstyle]
inherit = false
ignore = D1,D212,D203

[pylint.MASTER]
disable =
    c-extension-no-member,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    wrong-import-order,
    ungrouped-imports,
    wrong-import-position,
    protected-access,
    no-name-in-module,
    too-many-arguments,
    too-many-statements,
    too-many-lines,
    raise-missing-from,
    duplicate-code,
    broad-except,
    too-many-branches,
    too-many-locals,
    fixme

[pylint.BASIC]
good-names = ex, i, j, k, Run, _, e, x, dn, cn, ip, os, unicode

[pylint.IMPORTS]
ignored-modules =
    ansible.module_utils.ansible_freeipa_module,
    ipalib, ipalib.config, ipalib.constants, ipalib.krb_utils, ipalib.errors,
    ipapython.ipautil, ipapython.dn, ipapython.version, ipapython.dnsutil,
    ipaplatform.paths

[pylint.REFACTORING]
max-nested-blocks = 9

[pylint.FORMAT]
max-line-length = 80
